--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: money-monitor-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
     envVars:
-      - key: FIREBASE_CREDENTIALS_PATH
-        value: firebase-credentials.json
+      - key: PYTHON_VERSION
+        value: "3.11"
